# java_properties

./: README.md
1/: Doxyfile  main.cpp
1/doxygen/html/: annotated.html  classes.html  dialog_8h_source.html  dir_0277b739360aa922aa56faa64dc53dd8.html  dir_1ab8c80cf0932f9059c45bb4f7717f9b.html  dir_31f7033fdf4164847b603c03b05423df.html  dir_400c0182dd0ae12b0921a4b3393eb78d.html  dir_40c6b81ba45ca414eb015ef7404e087e.html  dir_42d2afc3db123d77480363d01d4020b1.html  dir_47a62f3cf0a9a3cbc783f1f5e15ceb95.html  dir_4bb7bfde90519a9c65739aef4a46e9ea.html  dir_60c71addd4951cb093d9c7b432053d2a.html  dir_9961bd22328770c24ab97859f1c57d93.html  dir_9c556cb617df81271c985ce53fec2656.html  dir_a390b17132617d2d721f279ea5c65527.html  dir_ad57e6e8ca527ca74665d5556d528a86.html  dir_ada92a0c20eb3ec8db0309d4f5a3a3ad.html  dir_b4746d15340b7931f2435f115b2727d9.html  dir_cbc11de9850a8458c25423f00e1b8e94.html  dir_d0411a3330e1b0f1a8484884e468d215.html  dir_e9cd1544bcb3a86888c38a706c5d917d.html  dir_ec4c8781a0d1e74cd3e878a4880ea535.html  dir_efc88e61613bded24a6b4ed8ca9a6714.html  files.html  functions.html  functions_vars.html  index.html  input_8h_source.html  namespacemembers.html  namespacemembers_func.html  namespaceprop.html  namespaces.html  properties_8h_source.html  structprop_1_1Properties-members.html  structprop_1_1Properties.html
1/doxygen/latex/: files.tex  (+8 more)
1/tests/: CMakeLists.txt  testing.cpp
input/: input.cpp  input.h
project/: CMakeLists.txt
project/property/: CMakeLists.txt
project/property/dialog/: dialog.cpp  dialog.h
project/property/properties/: properties.cpp
(+10 files in other folders)
